# toolchains_llvm_bootstrapped

./: .bazelrc  .buildifier.json  .gitattributes  .gitignore  BUILD.artifacts.tpl  BUILD.bazel  Dockerfile  LICENSE  MODULE.bazel  README.md  defs.bzl  directory.bzl  http_bsdtar_archive.bzl  http_pkg_archive.bzl  llvm.bzl  llvm.patch  llvm_raw.bzl  llvm_versions.json  non_module_deps.bzl  rbe.bzl  sh_script.bzl  targets.bzl  zig_index.json
bootstrap/llvm/: BUILD.bazel  BUILD.llvm_release.tpl  llvm_release.bzl
config/: BUILD.bazel  defs.bzl
config/bootstrap/: BUILD.bazel
config/stage1/: BUILD.bazel
constraints/cxxstdlib/: BUILD.bazel  cxxstdlib_versions.bzl
constraints/fpu/: BUILD.bazel
constraints/libc/: BUILD.bazel  declare_libcs_constraints.bzl  libc_versions.bzl
e2e/cross_compilation/: BUILD.bazel  MODULE.bazel  add.c  linux_kernel_version_test.c  test.cc  test_hello_qemu.sh
e2e/rules_cc/: .bazelignore  .bazelrc  BUILD.bazel  Dockerfile  MODULE.bazel  asan_fail.cc  asan_output_test.sh  bazel_version.bzl  build_docker.sh  cfi_fail.cc  cfi_output_test.sh  comm_symbol_strong.c  comm_symbol_tentative.S  defs.bzl  dfsan_fail.cc  dfsan_output_test.sh  dsym_output_test.sh  duplicate_static_library_failure_test.cc  duplicate_static_library_failure_test.sh  duplicate_symbol_a.cc  duplicate_symbol_b.cc  external_include_paths_test.sh  fission_debug_package_test.sh  fuzzer_asan_main.cc  fuzzer_main.cc  fuzzer_output_test.sh  fuzzer_sanitizer_output_test.sh  fuzzer_ubsan_main.cc  libomp_test.cc  libstdcxx_headers.cc  libstdcxx_main_dynamic_output_test.sh  lsan_fail.cc  lsan_output_test.sh  msan_fail.cc  msan_output_test.sh  musl_header_generation_tests.bzl  no_optimize.cc  nsan_fail.cc  nsan_output_test.sh  objc_cc_test.cc  (+25 more)
e2e/rules_cc/external_include_paths_test/: BUILD.bazel  MODULE.bazel  defs.bzl  error_header_test.c
e2e/rules_foreign_cc/: BUILD.bazel  MODULE.bazel  pfm.BUILD.bazel  pfm_test.cc  rules_foreign_cc.patch
e2e/rules_rs/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  rules_cc_rules_rs_allowlist.patch  rules_rs_disable_strip.patch  rules_rs_rust_objcopy.patch  rules_rs_windows_gnullvm_msvcrt.patch  rust_binary_cross_build_test_suite.bzl  test_platform.sh
e2e/rules_rs/src/: linkstamp.cc
e2e/rules_rust/: .bazelrc  BUILD.bazel  MODULE.bazel  libmagic_sh_script.patch  rules_rust_artifact_names.patch  rules_rust_default_libs.patch  rust_binary_cross_build_test_suite.bzl  toolchain_lib.patch  windows_strip.patch
e2e/wasm/: .bazelrc  BUILD.bazel  MODULE.bazel  gazelle_pure.patch  go.mod  rules_go.patch  wasm.c  wasm_test.go
examples/custom_targets/: BUILD.bazel  MODULE.bazel  README.md  hello.cc
examples/rules_cc/: BUILD.bazel  MODULE.bazel  defs.bzl  ubsan_fail.cc  ubsan_output_test.sh
examples/rules_rust/: BUILD.bazel  MODULE.bazel  README.md  rust_binary_cross_build_test_suite.bzl
extensions/: BUILD.bazel  gcc.bzl  llvm_source.bzl  llvm_toolchain_minimal.bzl  llvm_toolchain_minimal_index.json  osx.bzl  toolchain.bzl
glibc/: BUILD.bazel  copy_glibc.sh  copy_libSystem.sh  glibc_stubs_assembly_files.bzl  libc_shared_library.bzl
internal_tools/: BUILD.bazel  preset.bazelrc
lib/: BUILD.bazel
lib/libunwind/: BUILD.bazel
runtimes/: BUILD.bazel  README.md  copy_to_resource_directory.bzl  defs.bzl  module_map.BUILD.bazel  module_map.bzl
runtimes/compiler-rt/: BUILD.bazel
runtimes/cxxstdlib/: BUILD.bazel
runtimes/glibc/: BUILD.bazel  abilists  glibc_dynamic_linker.bzl  glibc_linker_script.bzl  glibc_shared_library.bzl  glibc_stubs_assembly_files.bzl  libc_aware_target_triple.bzl
runtimes/glibc/extension/: BUILD.bazel  BUILD.glibc-headers.tpl  BUILD.trampoline.tpl  glibc-headers.BUILD.bazel  glibc.bzl  glibc_headers_index.json  make_select_glibc_repository_target.bzl  trampoline.BUILD.bazel
runtimes/libcxx/: BUILD.bazel
runtimes/libstdcxx/: AGENTS.md  BUILD.bazel  acinclude.m4.bzl  configure.ac.bzl  crossconfig.m4.bzl  gcc_config_checks.bzl  libstdcxx_config_h.bzl  libstdcxx_largefile_config_header.bzl  linkage.m4.bzl  target_config.bzl
runtimes/libstdcxx/autoconf/: BUILD.bazel  autoconf_config.bzl
runtimes/libstdcxx/docs/: BUILD.bazel  autoconf.README.md  autoconf.checks.md  autoconf.usage.md  config_define_status.txt
runtimes/libunwind/: BUILD.bazel
runtimes/mingw/: BUILD.bazel  BUILD.tpl  crt_object.bzl  crt_sources.bzl  import_libs.bzl  mingw.BUILD.bazel
runtimes/musl/: BUILD.bazel  libc_musl_srcs_filegroup.bzl
sanitizers/: BUILD.bazel  ubsan_ignore.txt
tests/: e2e.sh  (+2 more)
toolchain/: BUILD.bazel  README  README.md  bootstrap_stages.bzl  cc_toolchain.bzl  clang_wrapper.sh  declare_toolchains.bzl  exec_stage0_binary.bzl  selects.bzl
toolchain/args/: BUILD.bazel  llvm_target_triple.bzl
toolchain/bootstrap/: BUILD.bazel  README.md  bootstrap_binary.bzl  cc_bootstrap_library.bzl  cc_bootstrap_shared_library.bzl  cc_bootstrap_static_library.bzl  declare_toolchains.bzl  fdo_profile.bzl  transition_settings.bzl  zstd_fdo.BUILD.bazel
toolchain/extension/: llvm.bzl  osx.bzl
toolchain/features/: BUILD.bazel
toolchain/llvm/: BUILD.bazel  BUILD.llvm_release.tpl  llvm.bzl  llvm_release.BUILD.bazel  llvm_release_windows.BUILD.bazel
toolchain/runtimes/: BUILD.bazel  README.md  cc_runtime_binary.bzl  cc_runtime_library.bzl  cc_runtime_shared_library.bzl  cc_runtime_static_library.bzl  cc_stage0_common.bzl  cc_stage0_library.bzl  cc_stage0_object.bzl  cc_stage0_shared_library.bzl  cc_stage0_static_library.bzl  cc_unsanitized_library.bzl  with_cfg_runtimes_common.bzl
toolchain/stage1/: BUILD.bazel  README.md  declare_toolchains.bzl  stage1_binary.bzl
toolchain/stage2/: BUILD.bazel  README.md  cc_stage2_common.bzl  cc_stage2_library.bzl  cc_stage2_object.bzl  cc_stage2_shared_library.bzl  cc_stage2_static_library.bzl  cc_unsanitized_library.bzl  declare_toolchains.bzl  defs.bzl
tools/: BUILD.bazel  defs.bzl  gen_llvm_versions_index.py  preset.bazelrc  update_osx_sdk.py
tools/internal/: BUILD.bazel  header_parser.c  header_parser.cc  link_wrapper.c  static_library_validator.c  static_library_validator.cc
(+103 files in other folders)
