load("//toolchain:selects.bzl", "LLVM_VERSION")

platform(
    name = "rbe_platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        # ubuntu:22.04 has GNU C Library (Ubuntu GLIBC 2.35-0ubuntu3.10)
        # But apparently not in this docker://ubuntu:22.04 image?
        "@toolchains_llvm_bootstrapped//constraints/libc:gnu.2.28",
        "@bazel_tools//tools/cpp:clang",
    ],
    exec_properties = {
        "container-image": "docker://ubuntu:22.04",
        "OSFamily": "Linux",
    },
)

alias(
    name = "builtin_headers",
    actual = select({
        "//platforms/config:macos_aarch64_prebuilt": "@llvm-toolchain-minimal-%s-darwin-arm64//:builtin_headers" % LLVM_VERSION,
        "//platforms/config:linux_x86_64_prebuilt": "@llvm-toolchain-minimal-%s-linux-amd64//:builtin_headers" % LLVM_VERSION,
        "//platforms/config:linux_aarch64_prebuilt": "@llvm-toolchain-minimal-%s-linux-arm64//:builtin_headers" % LLVM_VERSION,
        "//platforms/config:windows_aarch64_prebuilt": "@llvm-toolchain-minimal-%s-windows-arm64//:builtin_headers" % LLVM_VERSION,
        "//platforms/config:windows_x86_64_prebuilt": "@llvm-toolchain-minimal-%s-windows-amd64//:builtin_headers" % LLVM_VERSION,
    }),
    visibility = ["//visibility:public"],
)


