load("//toolchain:selects.bzl", "LLVM_VERSION")

alias(
    name = "rbe_platform",
    actual = "@rbe_platform//:rbe_platform",
    visibility = ["//visibility:public"],
)

alias(
    name = "builtin_headers",
    actual = select({
        "//platforms/config:macos_aarch64_prebuilt": "@llvm-toolchain-minimal-%s-darwin-arm64//:builtin_headers" % LLVM_VERSION,
        "//platforms/config:linux_x86_64_prebuilt": "@llvm-toolchain-minimal-%s-linux-amd64//:builtin_headers" % LLVM_VERSION,
        "//platforms/config:linux_aarch64_prebuilt": "@llvm-toolchain-minimal-%s-linux-arm64//:builtin_headers" % LLVM_VERSION,
        "//platforms/config:windows_aarch64_prebuilt": "@llvm-toolchain-minimal-%s-windows-arm64//:builtin_headers" % LLVM_VERSION,
        "//platforms/config:windows_x86_64_prebuilt": "@llvm-toolchain-minimal-%s-windows-amd64//:builtin_headers" % LLVM_VERSION,
    }),
    visibility = ["//visibility:public"],
)


