load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load(":defs.bzl", "config_settings")

package(default_visibility = ["//visibility:public"])

config_settings()

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "@bazel_skylib//lib:selects",
        "@bazel_skylib//rules:common_settings",
    ],
)
