load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "llvm",
    srcs = ["llvm.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@llvm-raw//utils/bazel:configure"],
)

bzl_library(
    name = "llvm_source",
    srcs = ["llvm_source.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_skylib//lib:structs",
        "@bazel_tools//tools/build_defs/repo:bzl_srcs",
    ],
)

bzl_library(
    name = "osx",
    srcs = ["osx.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//:http_pkg_archive",
        "@bazel_features//:features",
    ],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//platforms:common"],
)
