load("@bazelrc-preset.bzl", "bazelrc_preset")
load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")

buildifier(
    name = "buildifier.fix",
    add_tables = "//:.buildifier.json",
    diff_command = "diff",
    exclude_patterns = ["./.git/*"],
    lint_mode = "fix",
    mode = "fix",
)

buildifier_test(
    name = "buildifier.check",
    size = "small",
    add_tables = "//:.buildifier.json",
    diff_command = "diff",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "diff",
    no_sandbox = True,
    tags = [
        "manual",
        "no-remote-exec",
    ],
    workspace = "//:MODULE.bazel",
)

bazelrc_preset(
    name = "preset",
    doc_link_template = "https://registry.build/flag/bazel?filter={flag}",
)
